src/infrastructure/cloudformation/templateBodytest.json
{
	"AWSTemplateFormatVersion": "2010-09-09",
	"Description": "Sample CloudFormation Template for CSYE 6225 - Fall 2017",
	
	"Parameters" : 
	{
	    "VpcId":
		 {
	        "Description" : "VpcID",
      		"Type": "String"
  		  },

	    "subnetGroupId1" :
		{
		"Description" : "Subnet group Id to create DB subnet group",
      		"Type": "String"
		},
	    "subnetGroupId2" :
		{
		"Description" : "Subnet group Id to create DB subnet group",
      		"Type": "String"
		},
	    "DBName" :
		{
		"Description" : "Name of database",
      		"Type": "String"
		},
	    "EC2SecurityGroupId" :
		{
		"Description" : "Ec2 security Group ID",
      		"Type": "String"
		}

	},
	"Resources": {
		"EC2Instance": {
			"Type": "AWS::EC2::Instance",
			"Properties": {
				"ImageId": "ami-cd0f5cb6",
				"InstanceType": "t2.micro",
				"SecurityGroupIds": [{
					"Fn::GetAtt": [
						"sgv",
						"GroupId"
					]
				}],
				"KeyName": "id_rsa"
				}
		},
		"sgv": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": "Enable HTTP access via port 80, SSH access via port 22",
				"VpcId": { "Ref" : "VpcId" },
				"SecurityGroupIngress": [{
						"IpProtocol": "tcp",
						"FromPort": "80",
						"ToPort": "80",
						"CidrIp": "10.0.2.15/24"
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "22",
						"ToPort": "22",
						"CidrIp": "10.0.2.15/24"
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "443",
						"ToPort": "443",
						"CidrIp": "10.0.2.15/24"
					}
				]
			}
		},

		"MyDB" : {
   			"Type" : "AWS::RDS::DBInstance",
   			"Properties" : 
			{
				"Engine" : "MySQL",
				"AllocatedStorage" : "100",
				"EngineVersion" : "5.6.35",
				"DBInstanceClass" : "db.t2.medium",
				"MultiAZ" : "false",
				"DBInstanceIdentifier" : "csye6225-fall2017",
				"MasterUsername" : "csye6225master",
				"MasterUserPassword" : "csye6225password",
				"DBSubnetGroupName" : { "Ref" : "myDBSubnetGroup" },
				"PubliclyAccessible" : "false",
      				"DBName" : { "Ref" : "DBName" }
   			},
   			"DeletionPolicy" : "Snapshot"
			}, 
		
		"myDBSubnetGroup" : 
		{
			"Type" : "AWS::RDS::DBSubnetGroup",
         		"Properties" : {
            			"DBSubnetGroupDescription" : "Subnet group description",
            			"SubnetIds" : [{ "Ref" : "subnetGroupId1" } , { "Ref" : "subnetGroupId2" }]
         			}
		},  


		
		"DBSecurityGroup": {
			   "Type": "AWS::RDS::DBSecurityGroup",
			   "Properties": {
			   		"EC2VpcId" : { "Ref" : "VpcId" },
			   		"DBSecurityGroupIngress": 
					[{
						"EC2SecurityGroupId": { "Ref": "EC2SecurityGroupId"}
					}],
					"GroupDescription": "Frontend Access"
  					 }
				}
	}
}
